<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.score.ScoreActivity">

    <TextView
        android:id="@+id/baca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nilai_skor_nya_adalah"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/baca"
        android:layout_centerInParent="true"
        android:text="@string/_80"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/ultra_light_pink"
        android:text="@string/kembali_ke_halaman_menu"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="0dp" />

</RelativeLayout>